--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -6,7 +6,7 @@
 
 \newcommand{\arch}{x86-64}
 \newcommand{\tool}{our tool}
-\newcommand{\nullsp}[1]{Null(#1)}
+\newcommand{\nullsp}[1]{Ker(#1)}
 \newcommand{\bisim}{bisimulation}
 \newcommand{\bisims}{bisimulations}
 \newcommand{\bisimrep}{proof obligation diagraph}
@@ -15,7 +15,8 @@
 \newcommand{\shadows}{shadow registers}
 \newcommand{\cutpoint}{cutpoint}
 \newcommand{\cutpoints}{cutpoints}
-\newcommand{\controlflowmatrix}{M_{controlflow}}
-\newcommand{\controlflownullmatrix}{M_{controlflownull}}
+\newcommand{\controlflowmatrix}{M_{cf}}
+\newcommand{\controlflownullmatrix}{\nullsp{\controlflowmatrix}}
+\newcommand{\fimatrix}{M_{fi}}
 \newcommand{\totalbench}{26}
 \newcommand{\libc}{libc}
