--- a/paper/pldi2019.bib
+++ b/paper/pldi2019.bib
@@ -134,3 +134,14 @@
   note         = {{\tt http://www.sagemath.org}},
   Year         = {2017},
 }
+
+@InProceedings{Fedyukovich2015,
+author="Fedyukovich, Grigory
+and Gurfinkel, Arie
+and Sharygina, Natasha",
+title="Automated Discovery of Simulation Between Programs",
+booktitle="Logic for Programming, Artificial Intelligence, and Reasoning",
+year="2015",
+pages="606--621",
+}
+
