--- a/paper/pldi2019.tex
+++ b/paper/pldi2019.tex
@@ -64,6 +64,11 @@
 \usepackage{xcolor}
 \usepackage{amssymb}
 
+\usepackage{array} %https://tex.stackexchange.com/questions/112576/math-mode-in-tabular-without-having-to-use-everywhere
+\newcolumntype{L}{>{$}l<{$}}
+\newcolumntype{C}{>{$}c<{$}}
+\newcolumntype{R}{>{$}r<{$}}
+
 \begin{document}
 
 %% Title information
