started on into

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -1,4 +1,19 @@
 \section{Introduction}
+
+Equivalence checking is a long-standing yet important problem.  In both
+equivalence checking and relational verification, many state-of-the-art
+algorithms depend upon a simulation or bisimulation relation.  These relations
+ultimately relate both the data of the two programs (e.g. by \emph{invariants})
+but also the control flow.  However, past works have generally been very
+limitted in this latter respect; automatically finding relationships between
+the control flow of one program and the control flow of another typically
+requires unrealistic assumptions.  
+
+We address this problem in a data-driven context, such as superoptimization, where there are readily available test cases that
+
+
+
+
 \todo{write me}
 
 \todo{definitely need to address what the target and rewrite are, the notion of control flow correspondence / product programs}
