--- a/paper/related.tex
+++ b/paper/related.tex
@@ -1,4 +1,4 @@
-\section{Related Work}
+\section{Related Work}\label{sec:related}
 
 The most similar work to ours is that of~\cite{Dahiya17ASPLAS}. The
 authors perform black-box equivalence checking across a variety of
